# sigma_pikachu

./: .env.example  .gitignore  README.md  build.sh  build_update_bin_lib.py  config.json  config.yaml  config.yaml.example  llama-swap.config.yaml.example  main.py  pyproject.toml  sigma_pikachu.spec  svgloader.py
sigma_pikachu/: __init__.py  config_manager.py  constants.py  main.py  process_manager.py  ui_manager.py  utils.py
sigma_pikachu/lib/: libggml-base.dylib  libggml-blas.dylib  libggml-cpu.dylib  libggml-metal.dylib  libggml-rpc.dylib  libggml.dylib  libllama.dylib  libllava_shared.dylib  libmtmd.dylib  libmtmd_helper_shared.dylib  libmtmd_shared.dylib
sigma_pikachu/services/: llama_server_manager.py  llama_swap_manager.py  mcp_server_manager.py  ollama_manager.py  process_manager.py  proxy_server_manager.py  socket_proxy.py
sigma_pikachu/settings/: config_manager.py
tools/: benchmark_models_specificprompt.py  benchmark_threads.py  checkBinVersions.sh  determine_gpu_layers_gem.py  gguf_analyzer_combined.py  gguf_analyzer_oai.py  gguf_backup.py  gguflib.py  proxy.py  regex_test.py  updateOllamaBin.sh
